--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "firebase": "^11.6.0",
+    "framer-motion": "^12.7.4",
+    "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^7.5.1"
+    "react-router-dom": "^7.5.1",
+    "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.19.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
